Update My Jesus Project.html

--- a/My Jesus Project.html
+++ b/My Jesus Project.html
@@ -63,7 +63,17 @@
               </div>
               <script  src="script.js"></script>
               <h1>Mommy's Office Card</h1>
-              <img src="https://mail.google.com/mail/u/0?ui=2&ik=be896c2008&attid=0.1&permmsgid=msg-f:1825800266206197158&th=19568bab2a08b5a6&view=att&disp=safe&realattid=19568ba6aae75dc82f11&zw">
+              <h2>Her Location</h2>
+              <p>Her locatiion is 1280 Finch Avenue West,Suite 615, Toronto, Ontario M3J 3K6</p>
+              <h2>Her Phone Number</h2>
+              <p>Her Phone number is +1(647)512-9342</p>
+              <h2>Her Website</h2>
+              <a href="http://ngninkeulaw.com/">You can see my mom's Website</a>
+              <p>Her contact email is contact@ngninkeulaw.com or
+                lnnlawcorp@gmail.com
+              </p>
+              <h2>Her Social Media Email</h2>
+              <p>Her Social media email is @ngninkeulaw</p>
               <p></p>
                 <hr>
                 <h1>This is Me</h1>
