Update My Jesus Project.html

--- a/My Jesus Project.html
+++ b/My Jesus Project.html
@@ -47,7 +47,7 @@
             <hr>
               <h1>Mommy's Office Card</h1>
               <h2>Her Location</h2>
-              <p>Her locatiion is 1280 Finch Avenue West,Suite 615, Toronto, Ontario M3J 3K6</p>
+              <p>Her location is 1280 Finch Avenue West,Suite 615, Toronto, Ontario M3J 3K6</p>
               <h2>Her Phone Number</h2>
               <p>Her Phone number is +1(647)512-9342</p>
               <h2>Her Website</h2>
@@ -57,7 +57,6 @@
               </p>
               <h2>Her Social Media Email</h2>
               <p>Her Social media email is @ngninkeulaw</p>
-              <p></p>
                 <hr>
                 <h1>This is Me</h1>
               <img src="https://mail.google.com/mail/u/0?ui=2&ik=be896c2008&attid=0.1&permmsgid=msg-f:1825358345011066649&th=1954f9be5e2df719&view=fimg&fur=ip&permmsgid=msg-f:1825358345011066649&sz=s0-l75-ft&attbid=ANGjdJ8L5OYF8192-mBkTrh-gTOwKS5jxZgm3p16wVvQ_Q8nvvrXUXiTdYcnG2EdMrTtoYszJ1a5t2NCf3RoPeFj16O-K-zxzNXJS4XjxO6fho6SG2-hK3WqfnHUwo8&disp=emb&realattid=290C9280-967B-4547-839D-E866F252F72C&zw">
