Update My Jesus Project.html

--- a/My Jesus Project.html
+++ b/My Jesus Project.html
@@ -42,7 +42,7 @@
 
 
             <a href="http://ngninkeulaw.com/">You can see my mom's Website</a>
-            <p>My Mom is a Hard Working Lawyer and I love Her. On March 4 and 5 6:00pm to 1:04am Tuesday and Wednesday 2025, When Neilan Puke Mommy and Daddy Helped Neilan.</p>
+            <p>My Mom is a Hard Working Lawyer and I love Her. On March 4 and 5 6:00pm to 1:04am Tuesday and Wednesday 2025, When Neilan Puked Mommy and Daddy Helped Neilan.</p>
             <a href="https://youtu.be/Qxpjjm8fr7o">This is my Favourite Music</a>
             <hr>
               <h1>Mommy's Office Card</h1>
